# algo

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  format.bat
app/: main.c
hdr/: array.h  list.h  listd.h  search.h  sort.h  stupid-hashmap.h  util.h
kitty/: README.md  impl.cpp  impl.h  kitty.h  locker.h  main.cpp  object_ctr.cpp  object_ctr.h  pool.h  tracer.hpp
src/: array.c  list.c  listd.c  search.c  sort.c  stupid-hashmap.c  util.c
